Fixed image alignment, began overhaul of flow.

--- a/style.css
+++ b/style.css
@@ -362,11 +362,14 @@ h2 {
 }
 
 #shadowBox {
+  text-align: center;
   background-color: rgb(0, 0, 0);
   /* Fallback color */
   background-color: rgba(0, 0, 0, 0.2);
   /* Black w/opacity/see-through */
   border: 3px solid;
+  width: 80%;
+  margin: auto;
 }
 
 .rainbow {
